# Head

# 0.1.5

- map_formulae_to_values now caches its results, which dramatically speeds up some edge-case long formulae

# 0.1.4

- Changed from requiring Ruby 1.9 to requiring 1.9 or newer. 

# 0.1.3

- Closed #9 a bug which left Getsetranges where it shouldn't be.
- Closed #10 a bug that gave named references a prefix of '_'

# 0.1.2

- C version: Fixed naming of common methods
- Updated the way that command tests are run
- Merged energynumbers memory freeing code

# 0.1.1

- C version: now optionally writes out accessors for named references
- C version: shim can now get and set arrays of values, where the underlying C code supports it (which is only the case for some named references)
- C version: fixed bug in mapping of sheet names that could occur if two sheets had similar names

# 0.1.0

- BACKWARDS INCOMPATIBLE CHANGE: The ExcelValue struct in the Ruby FFI interface that is generated when compiling excel to C now gives type 'pointer' to its 'string' attribute. This is so that string values can be written through the FFI interface as well as read.

- C version now generates a Shim class that automatically translates between ruby values and excel values. This makes it closer to being drop in compatible with the Ruby version.

# 0.0.14

- Fix parsing of non-western characters in formulae and named references

# 0.0.13

- Fix homepage in gem

# 0.0.12

- By default, the generated tests for the generated code are more relaxed about how closely numbers match.
- Command line option to generate tests that require an exact match

# 0.0.11

- Better handling of shared formulae in Excel: copes with cells that are exceptions to the general sharing rule

# 0.0.10

- Increased the default heap size for the memory to be freed later heap

# 0.0.9

- Memory used by generated C code can now be freed, reducing memory leak

# 0.0.8

- Simplified the code by making it automatically generate filenames for intermediate files
- Added a script to clean up the examples directory